      dbapis [ticket:505]
    - sending None as an argument to func.<something> will produce
      an argument of NULL
    - query strings in unicode URLs get keys encoded to ascii
      for **kwargs compat
    - slight tweak to raw execute() change to also support tuples
      for positional parameters, not just lists [ticket:523]
- orm:
    - added query.with_parent(someinstance) method.  searches for
      target instance using lazy join criterion from parent instance.
      takes optional string "property" to isolate the desired relation.
      also adds static Query.query_from_parent(instance, property)
      version. [ticket:541]
    - corresponding to label/bindparam name generataion, eager loaders 
      generate deterministic names for the aliases they create using 
      md5 hashes.
    - improved/fixed custom collection classes when giving it "set"/
      "sets.Set" classes or subclasses (was still looking for append()
      methods on them during lazy loads)
    - fix to many-to-many relationships targeting polymorphic mappers
      [ticket:533]
    - making progress with session.merge() as well as combining its
      usage with entity_name [ticket:543]
- sqlite:
    - removed silly behavior where sqlite would reflect UNIQUE indexes
      as part of the primary key (?!)
- oracle:
    - small fix to allow successive compiles of the same SELECT object
      which features LIMIT/OFFSET.  oracle dialect needs to modify
      the object to have ROW_NUMBER OVER and wasn't performing 
      the full series of steps on successive compiles.

0.3.6
- sql:
    - bindparam() names are now repeatable!  specify two
      distinct bindparam()s with the same name in a single statement,
      and the key will be shared.  proper positional/named args translate
      at compile time.  for the old behavior of "aliasing" bind parameters
      with conflicting names, specify "unique=True" - this option is